opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_log"
bug-reports: "https://github.com/janestreet/ppx_log/issues"
dev-repo: "git+https://github.com/janestreet/ppx_log.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_log/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "base"
  "ppx_compare"
  "ppx_enumerate"
  "ppx_expect"
  "ppx_fields_conv"
  "ppx_here"
  "ppx_let"
  "ppx_sexp_conv"
  "ppx_sexp_message"
  "ppx_sexp_value"
  "ppx_string"
  "sexplib"
  "stdio"
  "dune"             {>= "2.0.0"}
  "ppxlib"           {>= "0.28.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Ppx_sexp_message-like extension nodes for lazily rendering log messages"
description: "
Part of the Jane Street's PPX rewriters collection. 
"
