(library
 (name ppx_log_kernel)
 (public_name ppx_log.kernel)
 (kind ppx_rewriter)
 (ppx_runtime_libraries ppx_sexp_conv.runtime-lib ppx_log.types
   ppx_log.syntax)
 (libraries ppxlib ppx_here.expander ppx_sexp_conv.expander
   ppx_sexp_message.expander ppx_string stdio)
 (preprocess
  (pps ppx_compare ppx_enumerate ppx_expect ppx_fields_conv ppx_let
    ppx_sexp_conv ppx_sexp_value ppxlib.metaquot)))
