(library (name ppx_log_test)
 (libraries async core ppx_log_lib_with_source_pos)
 (preprocess (pps ppx_jane ppx_expect ppx_let)))

(alias (name runtest)
 (deps (:first_dep ppx_output_test.ml.pp) ppx_output_test.output
  %{workspace_root}/app/make-corrected-file/bin/main.exe
  %{workspace_root}/bin/apply-style jbuild)
 (action
  (bash
    "< %{first_dep} %{workspace_root}/bin/apply-style -- format - -original-file ppx_output_test.ml -directory-config jbuild | \\\
   \ncat <(echo '(* -*- mode: tuareg; -*- *)') - | \\\
   \n%{workspace_root}/app/make-corrected-file/bin/main.exe ppx_output_test.output")))